# monmouth-rag-memory-exex

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  summary.md
.github/workflows/: ci.yml
benches/: integration_benchmarks.rs
blog-posts/: crypto-twitter-thread.md  technical-deep-dive.md  tradfi-institutional.md
docs/: chromadb-setup.md  integration.md
docs/integrations/: eigenda.md  eigenlayer.md  lagrange.md  othentic.md
examples/: chromadb_integration_demo.rs  integrated_agent_example.rs  integrations_demo.rs  lagrange_enhanced_demo.rs  othentic_enhanced_demo.rs  performance_production_demo.rs  state_synchronization_demo.rs  unified_agent.rs  unified_ai_coordinator_demo.rs
src/: enhanced_main.rs  enhanced_processor.rs  lib.rs
src/agents/: checkpointing.rs  mod.rs  recovery.rs
src/ai/: coordinator.rs  decision_engine.rs  mod.rs  rag_adapter.rs  traits.rs
src/alh/: coordination.rs  mod.rs
src/config/: mod.rs
src/context/: cache.rs  mod.rs  preprocessing.rs
src/error_handling/: circuit_breaker.rs  cross_exex.rs  mod.rs  recovery.rs  retry.rs
src/integrations/: composio.rs  eigenda.rs  eigenlayer.rs  lagrange.rs  mod.rs  othentic.rs  solana_exex.rs
src/integrations/crypto/: aggregation_service.rs  bls.rs  mod.rs  multi_quorum.rs  operator_sets.rs  programmatic_incentives.rs  slashing_redistribution.rs  task_archetypes.rs
src/integrations/lagrange/: cross_chain.rs  economics.rs  gateway.rs  historical_queries.rs  mod.rs  reputation.rs  state_committee.rs  verifier.rs
src/integrations/othentic/: hybrid_execution.rs  leader_election.rs  mcp_server.rs  mod.rs  pre_batching.rs  validation_service.rs
src/inter_exex/: bus.rs  messages.rs  mod.rs  protocol.rs
src/memory_exex/: agent_integration.rs  checkpointing.rs  ephemeral_zones.rs  indexed_store.rs  memory_hash.rs  memory_store.rs  mod.rs  portability.rs  types.rs  zero_alloc_store.rs
src/monitoring/: alerts.rs  dashboard.rs  health.rs  mod.rs  production.rs
src/othentic/: merkle_storage.rs  mod.rs  zk_circuits.rs
src/performance/: batching.rs  cache.rs  mod.rs  optimization.rs  throughput.rs
src/rag_exex/: agent_context.rs  chroma_config.rs  chroma_store.rs  context_retrieval.rs  cow_matcher.rs  embeddings.rs  enhanced_intent_parser.rs  intent_converter.rs  intent_parser.rs  knowledge_graph.rs  mod.rs  semantic_layer.rs  vector_store.rs
src/rag_exex/embeddings/: batch.rs  mod.rs  realtime.rs
src/rag_exex/knowledge_graph/: mod.rs  svm_integration.rs
src/reorg/: coordination.rs  mod.rs  shared_state.rs
src/shared/: agent_standard.rs  agent_state_manager.rs  ai_agent.rs  ai_agent_v2.rs  communication.rs  coordination.rs  eip7702.rs  memory_root.rs  metrics.rs  metrics_v2.rs  mod.rs  transaction_analyzer.rs  types.rs  unified_coordinator.rs
src/sync/: mod.rs
tests/integration/: cross_exex_tests.rs
