[package]
name = "monmouth-rag-memory-exex"
version = "0.1.0"
edition = "2021"

[dependencies]
# Reth dependencies
reth = { git = "https://github.com/paradigmxyz/reth" }
reth-exex = { git = "https://github.com/paradigmxyz/reth" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth" }
reth-provider = { git = "https://github.com/paradigmxyz/reth" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth" }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Vector store and embeddings
chromadb = "0.2"
candle-core = "0.7"
candle-transformers = "0.7"
tokenizers = "0.20"

# Database
libmdbx = { version = "0.5", features = ["lifetimed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Natural language processing
rust-bert = "0.22"
tch = "0.17"

# BLS and cryptography
blst = "0.3"
sha3 = "0.10"
hex = "0.4"

# Metrics and monitoring
prometheus = "0.13"
opentelemetry = "0.24"
opentelemetry-prometheus = "0.17"

# Networking
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
tower = "0.5"

# Error handling
eyre = "0.6"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utils
once_cell = "1.20"
parking_lot = "0.12"
dashmap = "6.1"
lru = "0.12"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
flate2 = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[[bench]]
name = "rag_query"
harness = false

[[bench]]
name = "memory_ops"
harness = false