[package]
name = "monmouth-rag-memory-exex"
version = "0.1.0"
edition = "2021"

[dependencies]
# Reth dependencies (using Git with version tag)
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Vector store and embeddings (removing conflicting ML dependencies)
# chromadb = "0.2"       # Causes version conflicts
# candle-core = "0.7"    # Rand version conflicts
# candle-transformers = "0.7"  # Rand version conflicts
# tokenizers = "0.20"    # Not needed for basic functionality

# Database
libmdbx = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Natural language processing (removing conflicting torch dependencies)
# rust-bert = "0.22"  # Conflicts with other torch versions
# tch = "0.17"        # Conflicts with rust-bert torch version

# BLS and cryptography
blst = "0.3"
sha3 = "0.10"
hex = "0.4"
# Additional cryptography for EigenLayer
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
# For BLS aggregation
num-bigint = "0.4"
num-traits = "0.2"

# Metrics and monitoring
prometheus = "0.13"
opentelemetry = "0.24"
opentelemetry-prometheus = "0.17"

# Networking and HTTP
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
tower = "0.5"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
reqwest = { version = "0.12", features = ["json"] }

# Error handling
eyre = "0.6"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utils
once_cell = "1.20"
sysinfo = "0.30"
parking_lot = "0.12"
dashmap = "6.1"
lru = "0.12"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
flate2 = "1.0"
getrandom = "0.2"
borsh = "1.5"
rand = "0.8"
ordered-float = "4.2"
priority-queue = "2.0"
petgraph = "0.6"
zstd = "0.13"
lz4_flex = "0.11"
snap = "1.1"
lazy_static = "1.5"
sha2 = "0.10"
alloy = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[[bench]]
name = "integration_benchmarks"
harness = false

[[example]]
name = "lagrange_enhanced_demo"
path = "examples/lagrange_enhanced_demo.rs"

[[example]]
name = "othentic_enhanced_demo"
path = "examples/othentic_enhanced_demo.rs"

[[example]]
name = "unified_ai_coordinator_demo"
path = "examples/unified_ai_coordinator_demo.rs"

[[example]]
name = "state_synchronization_demo"
path = "examples/state_synchronization_demo.rs"

[[example]]
name = "performance_production_demo"
path = "examples/performance_production_demo.rs"

[[example]]
name = "integrated_agent_example"
path = "examples/integrated_agent_example.rs"